# projecto-final-conciencia

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  shell.nix
generator/: CMakeLists.txt  main.cpp
include/training/: trainer.h
include/utec/algebra/: Tensor.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
include/utils/: number.h  print.h
src/: main.cpp
tests/: CMakeLists.txt
tests/batch_evaluator/: CMakeLists.txt
tests/batch_evaluator/src/: main.cpp
tests/gameplay_evaluator/: CMakeLists.txt
tests/gameplay_evaluator/src/: main.cpp
tests/image_evaluator/: CMakeLists.txt
tests/image_evaluator/src/: main.cpp
